--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 <meta name="format-detection" content="telephone=no">
 <meta name="keywords" content=",,,">
-<meta name="description" content="ディスクリプション">
+<meta name="description" content="スマホで宅建士とマッチングしてお部屋を探す新しい形">
 
 <!--▼△▼△▼△▼△▼△▼△▼△▼△▼△▼△▼△▼△▼△▼△▼△▼△▼△▼△▼△▼△-->
 <meta name="robots" content="noindex,nofollow"><!-- 本アップ前に必ず外す -->
@@ -15,11 +15,11 @@
 
 <!-- OGP -->
 <meta property="og:type" content="website"><!-- トップページであれば「website」-->
-<meta property="og:title" content="レスポンシブサイト"><!-- titleと文字数も揃える -->
-<meta property="og:site_name" content="レスポンシブサイト"><!-- サイト名 -->
+<meta property="og:title" content="ジカイエ"><!-- titleと文字数も揃える -->
+<meta property="og:site_name" content="ジカイエ"><!-- サイト名 -->
 <meta property="og:url" content="">
 <meta property="og:image" content=""><!-- 1200x630推奨 -->
-<meta property="og:description" content="ディスクリプション">
+<meta property="og:description" content="スマホで宅建士とマッチングしてお部屋を探す新しい形">
 
 <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
 <link rel="stylesheet" href="./css/default.css">
