--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
 <!-- header -->
 <header>
-	<div class="hLogo"><img src="img/logo.png" alt="ジカイエ"></div>
+	<h1 class="hLogo"><img src="img/logo.png" alt="ジカイエ"></h1>
 	<ul class="headerUl">
 		<li class="menuBtn sp">
 			<a class="menu-trigger" href="#">
